errors.txt
For storing errors

HW10
BigSib.java:4: error: incompatible types: unexpected return value
       return ("What's up " + str + "?");
              ^
BigSib.java:4: error: incompatible types: String cannot be converted to void
       return ("What's up " + str + "?");
                                  ^
2 errors

HW12
Greet.java:16: error: cannot find symbol
    BigSib richard = new BigSib();
    ^
  symbol:   class BigSib
  location: class Greet
Greet.java:16: error: cannot find symbol
    BigSib richard = new BigSib();
                         ^
  symbol:   class BigSib
  location: class Greet
2 errors

Greet.java:16: error: cannot access BigSib
    BigSib richard = new BigSib();
    ^
  bad source file: ./BigSib.java
    file does not contain class BigSib
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
1 error
